@@ -1,6 +1,7 @@
 1.13.0
 ---
-- libmpg123 API version 26 (see NEWS.libmpg123)
+- libmpg123 API version 28 (see NEWS.libmpg123)
+- Fixed formatting of meta data printout in UTF-8 (via mpg123_strlen()).
 - Cleanup of symbols for the static library: Only have global symbols that are actually needed, prefix them with INT123_ to avoid conflicts.
 - Added --streamdump to get a copy of the data libmpg123 used.
 - Added --icy-interval and tweaked libmpg123 to make playback of ICY stream dumps possible.
